[package]
authors = ["JJ <jonathanjamesholt@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "adc"
version = "0.1.0"

[dependencies]
cortex-m = "^0.7.7"
cortex-m-rt = "^0.7"
cortex-m-semihosting = "^0.5"
critical-section = "1.1.2"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
embedded-hal = "^0.2.7"
panic-halt = "^0.2.0"
panic-probe = "0.3.2"
stm32f3xx-hal = {version = "^0.9.2", features = ["ld","rt","stm32f303x8"]}

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
[dependencies.stm32f3]
features = ["stm32f303", "rt"]
version = "^0.15.1"

# this lets you use `cargo fix`!
[[bin]]
name = "adc"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
